test/files/neg/t9781.check
t9781.scala:3: error: not found: value undefinedSymbol
  c(undefinedSymbol) += 1
    ^
1 error
